UD-621: fix alignment in list title

--- a/src/components/widget/list/cdvy-list-title.styl
+++ b/src/components/widget/list/cdvy-list-title.styl
@@ -1,7 +1,11 @@
 .cdvy-list-section-title
   color $label-info-color
-  line-height 19px
+  line-height 24px
   font-size 16px
   font-style italic
   margin 20px 0px 10px
+  vertical-align middle
 
+.cdvy-list-section-title-middle-align
+  vertical-align middle
+  display inline
